[tool.poetry]
name = "memorae-memory"
version = "0.1.0"
description = "Inspectable personal-memory retrieval and answering engine for the Memorae AI Engineer assessment"
authors = ["Mithlesh Upadhyay <mithleshupadhyay515@gmail.com>"]
readme = "README.md"
packages = [{ include = "memorae_memory", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.14"

[tool.poetry.scripts]
memorae-memory = "memorae_memory.main:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
